-
Bug
-
Resolution: Done
-
P2: Important
-
5.6
-
None
-
Windows 10 for Mobile, 2015
-
-
1ce52b0ddd71e7029f67fb91166783a0c09d25c6
For Windows Phone 8.1 there was IStatusBarStatics/IStatusBar classes to modify the statusbar to show/hide and also receive the geometry of the status bar. This is missing in any SDK at least starting until 10586. The problem with that is that UI which is "on top" might be overlayed with the statusbar and press events are not propagated.
There is also http://stackoverflow.com/questions/30262923/hiding-status-bar-white-bar-at-top-of-windows-10-universal-app-on-phone for an older preview.